--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-icons": "^4.10.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-spinners": "^0.13.8",
     "styled-components": "^6.0.3",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,6 +51,8 @@
   },
   "devDependencies": {
     "gh-pages": "^5.0.0",
+    "tailwind-scrollbar": "^1.0.0",
+    "tailwind-scrollbar-hide": "^1.0.0",
     "tailwindcss": "^3.3.2"
   }
 }
