--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.14.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.9",
     "react-spinners": "^0.13.8",
     "styled-components": "^6.0.3",
